--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -63,6 +63,7 @@
           <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
+          <li><a href="http://fontforge.github.io/en-US/">FontForge</a></li>
           <li><a href="http://git-scm.com/">Git</a></li>
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
@@ -75,9 +76,11 @@
           <li><a href="http://www.adobe.com/products/photoshop/">Photoshop</a></li>
           <li><a href="http://pngquant.org/">pngquant</a></li>
           <li><a href="http://sass-lang.com/">Sass</a></li>
+          <li><a href="https://people.mozilla.org/~jkew/woff/">sfnt2woff</a></li>
           <li><a href="https://github.com/svg/svgo">SVGO</a></li>
           <li><a href="http://lisperator.net/uglifyjs/">UglifyJS</a></li>
           <li><a href="http://www.vim.org/">Vim</a></li>
+          <li><a href="https://github.com/google/woff2">woff2</a></li>
         </ul>
 
         <h2>ウェブサイト上で使っているツール</h2>
@@ -110,7 +113,6 @@
         <ul>
           <li><a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a></li>
           <li><a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a></li>
-          <li><a href="https://plus.google.com/+Hail2unet">Google+でのハングアウト</a></li>
           <li><a href="mailto:hail2u@gmail.com">hail2u@gmail.com宛てのメール</a></li>
         </ul>
 
