--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.34
+ * style.css v6.68.35
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -459,7 +459,7 @@ th {
     display: inline-block; }
   .site-navigation mark {
     background-color: transparent;
-    border-bottom: 0.125rem solid;
+    border-bottom: 0.25rem double;
     color: #1188bb; }
   @media (min-width: 39.118rem) {
     .site-navigation li {
@@ -543,11 +543,12 @@ th {
 .footlinks li {
   display: table-cell;
   padding-right: 0.809rem; }
-  .footlinks li::after {
-    content: ''; }
   .footlinks li:first-child::after {
     content: '·';
     margin-left: 0.809rem; }
+  .footlinks li:last-child::after {
+    content: '';
+    margin-left: 0; }
 @media (min-width: 53.487rem) {
   .footlinks ul {
     margin-top: 11.09rem; } }
