--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.36
+ * style.css v6.68.37
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -165,6 +165,15 @@ td {
     width: 12.751rem;
     z-index: 1; } }
 
+.section-footer, .post-list .info {
+  color: #98928c;
+  font-size: 0.811rem;
+  line-height: 1.596; }
+  .section-footer .date, .post-list .info .date {
+    color: #6a625e; }
+  .section-footer .tag, .post-list .info .tag {
+    color: #6a625e; }
+
 h1, h2 {
   font-weight: 400;
   line-height: 1.294; }
@@ -206,7 +215,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
 .site-search .query, .searchbox .query {
   -webkit-appearance: none;
   background-color: #fdfcf7;
-  border: 0.063rem solid #cac5be;
+  border: 0.063rem solid #e1ddd5;
   border-radius: 0;
   box-sizing: border-box;
   color: #3c3330;
@@ -440,7 +449,9 @@ th {
   display: block;
   height: 3.01rem;
   margin-top: 0;
-  width: 1.86rem; }
+  position: fixed;
+  width: 1.86rem;
+  z-index: 10; }
   @media (min-width: 39.118rem) {
     .logo {
       height: 4.87rem;
@@ -450,13 +461,12 @@ th {
       margin-left: -14.369rem; } }
 
 .site-navigation {
+  display: table;
   font-size: 0.811rem;
+  margin-left: auto;
   margin-top: 0;
   padding-left: 0;
-  position: absolute;
-  right: 0.809rem;
-  text-transform: uppercase;
-  top: 0; }
+  text-transform: uppercase; }
   .site-navigation li {
     display: table-cell;
     line-height: 3.01rem;
@@ -518,20 +528,13 @@ th {
 
 .section-footer {
   bottom: 100%;
-  color: #98928c;
-  font-size: 0.811rem;
-  line-height: 1.995;
   position: absolute;
   width: 100%; }
-  .section-footer .date {
-    color: #6a625e; }
-  .section-footer .tag {
-    color: #6a625e; }
   @media (min-width: 53.487rem) {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
-        margin-top: 0.238rem; }
+        margin-top: 0.727rem; }
       [role="main"] > .section-footer {
         bottom: auto;
         top: auto; }
@@ -553,9 +556,6 @@ th {
   .footlinks li:first-child::after {
     content: '·';
     margin-left: 0.809rem; }
-  .footlinks li:last-child::after {
-    content: '';
-    margin-left: 0; }
 @media (min-width: 53.487rem) {
   .footlinks ul {
     margin-top: 11.09rem; } }
@@ -683,14 +683,6 @@ th {
   .post-list li {
     list-style-type: none;
     margin-top: 0.618rem; }
-  .post-list .info {
-    color: #98928c;
-    font-size: 0.811rem;
-    line-height: 1.294; }
-  .post-list .date {
-    color: #6a625e; }
-  .post-list .tag {
-    color: #6a625e; }
   @media (min-width: 39.118rem) {
     .post-list .info {
       float: right;
