--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.37
+ * style.css v6.68.38
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -414,6 +414,7 @@ img,
 video {
   box-sizing: border-box;
   height: auto;
+  max-height: 100%;
   max-width: 100%; }
   figure img, figure
   video {
@@ -586,7 +587,8 @@ th {
       max-width: 13.751rem;
       position: absolute;
       right: 0;
-      top: 6.576rem; } }
+      top: 6.576rem;
+      z-index: 1; } }
   @media (min-width: 53.487rem) {
     .site-search {
       top: 10.812rem; } }
@@ -788,8 +790,8 @@ th {
     background-size: auto 61.804%; }
   @media (min-width: 53.487rem) {
     .share-buttons a {
-      height: 2.124rem;
-      width: 2.124rem; } }
+      height: 1.974rem;
+      width: 1.974rem; } }
 .share-buttons .twitter-tweet a::before {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M448%20136.906c-14.128%206.267-29.313%2010.5-45.247%2012.405%2016.263-9.748%2028.756-25.187%2034.64-43.585-15.225%209.03-32.084%2015.585-50.03%2019.118-14.37-15.312-34.845-24.878-57.505-24.878-43.507%200-78.783%2035.273-78.783%2078.78%200%206.175.697%2012.188%202.04%2017.954-65.475-3.286-123.526-34.65-162.382-82.315-6.782%2011.635-10.667%2025.17-10.667%2039.607%200%2027.333%2013.908%2051.447%2035.05%2065.574-12.916-.41-25.064-3.953-35.685-9.853-.006.328-.006.656-.006.99%200%2038.17%2027.156%2070.01%2063.196%2077.25-6.61%201.8-13.57%202.764-20.755%202.764-5.077%200-10.012-.495-14.823-1.414%2010.025%2031.298%2039.12%2054.077%2073.594%2054.71-26.962%2021.132-60.93%2033.726-97.842%2033.726-6.36%200-12.63-.375-18.794-1.102%2034.865%2022.352%2076.276%2035.397%20120.766%2035.397%20144.908%200%20224.152-120.046%20224.152-224.155%200-3.415-.078-6.812-.23-10.19%2015.395-11.11%2028.75-24.984%2039.312-40.784%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E"); }
 .share-buttons .facebook-share a::before {
@@ -803,17 +805,15 @@ th {
     bottom: 0;
     top: auto; }
     .share-buttons ul::before {
-      display: block; }
+      display: block;
+      margin-bottom: 0.618rem; }
   .share-buttons li {
     padding-left: 0;
-    padding-right: 0.809rem; } }
+    padding-right: 1.618rem; } }
 
 .adsbygoogle {
   margin-top: 2.618rem;
   max-width: 336px; }
-
-img[src$='.svg'], img[src$='.svgz'] {
-  width: 100%; }
 
 html {
   -ms-overflow-style: -ms-autohiding-scrollbar; }
