--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.38
+ * style.css v6.68.39
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -453,6 +453,8 @@ th {
   position: fixed;
   width: 1.86rem;
   z-index: 10; }
+  .logo.to-top {
+    cursor: pointer; }
   @media (min-width: 39.118rem) {
     .logo {
       height: 4.87rem;
@@ -546,7 +548,7 @@ th {
 
 .global-footer {
   font-size: 0.811rem;
-  margin-bottom: 4.236rem; }
+  margin-bottom: 1.618rem; }
 
 .footlinks ul {
   margin-top: 6.854rem;
