--- a/styles/debug.css
+++ b/styles/debug.css
@@ -75,7 +75,7 @@ body::after {
   font-family: "Eau Douce", "Emoji", sans-serif; }
 
 .font-family-code {
-  font-family: "Source Code Pro", "Emoji", monospace; }
+  font-family: "M+ 1m Latin", "Emoji", monospace; }
 
 .italic {
   font-style: italic; }
