--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.39
+ * style.css v6.68.40
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -282,7 +282,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "Source Code Pro", "Emoji", monospace;
+  font-family: "M+ 1m Latin", "Emoji", monospace;
   line-height: 1.294; }
   @media (min-width: 39.118rem) {
     pre {
@@ -387,7 +387,7 @@ code,
 var,
 samp,
 kbd {
-  font-family: "Source Code Pro", "Emoji", monospace; }
+  font-family: "M+ 1m Latin", "Emoji", monospace; }
   p code::before, p code::after, p
   var::before, p
   var::after, p
