Use `main` for article content wrapper

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -76,7 +76,7 @@
             · <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
-        <div itemprop="articleBody">$body</div>
+        <main itemprop="articleBody">$body</main>
 
         <aside class="share-buttons">
           <ul>
