--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.41
+ * style.css v6.69.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -200,7 +200,7 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read
       color: #1188bb; } }
 
 p, pre, ul,
-ol, dl, figure, table, .searchbox {
+ol, dl, figure, table, .contact-form, .searchbox {
   margin: 1.618rem 0 0; }
 
 h2 + p, h2 + pre, h2 + ul, h2 +
@@ -597,6 +597,52 @@ th {
 
 .circular {
   border-radius: 51%; }
+
+.contact-form .spamfree {
+  display: none; }
+.contact-form .cell {
+  background-color: #fdfcf7;
+  border: 1px solid #e1ddd5;
+  border-bottom-width: 0;
+  border-right-width: 0;
+  box-sizing: border-box;
+  color: #98928c;
+  display: block;
+  font-size: 0.811rem;
+  padding: 0.5rem; }
+.contact-form .half {
+  float: left;
+  width: 50%; }
+.contact-form .full {
+  clear: both;
+  width: 100%; }
+.contact-form .for-email {
+  border-right-width: 1px; }
+.contact-form .for-message {
+  border-bottom-width: 1px;
+  border-right-width: 1px; }
+.contact-form .text-field {
+  background-color: transparent;
+  border: 0;
+  color: #3c3330;
+  display: block;
+  font-size: 1.313rem;
+  padding: 0;
+  width: 100%; }
+.contact-form .button {
+  background-color: #5bacd0;
+  border: 0;
+  border-radius: 0.125rem;
+  color: #f8f5ec;
+  cursor: pointer;
+  display: block;
+  font-size: 1.618rem;
+  font-weight: bolder;
+  letter-spacing: 0.125rem;
+  margin-top: 1rem;
+  padding-left: 0.125rem;
+  text-transform: uppercase;
+  width: 6em; }
 
 .drop img {
   min-width: 12.751rem; }
