Use `https:` if possible

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -34,8 +34,8 @@
         <p>このウェブサイトの更新情報は、以下の2種類のRSSフィードで配信しています。</p>
 
         <ul>
-          <li><a href="http://hail2u.net/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
-          <li><a href="http://hail2u.net/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
+          <li><a href="/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
+          <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
         </ul>
 
         <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>でも購読することができます。</p>
@@ -92,7 +92,7 @@
 
         <h2>マークアップとスタイルシート</h2>
 
-        <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML5 (WHATWG版)</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
+        <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML5 (WHATWG版)</a>に従って行っています。スタイルシートはSassの<a href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
 
         <h2>広告</h2>
 
@@ -100,7 +100,7 @@
 
         <h2>訪問者の追跡</h2>
 
-        <p>訪問者の情報を<a href="http://www.google.com/analytics/">Google Analytics</a>を使って収集しています。Analyticsによるデータの収集はこのウェブサイト自身のクッキーを利用しているので、完全に無効化するには<a href="http://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out Browser Add-on</a>をご使用のブラウザにインストールする必要があります。</p>
+        <p>訪問者の情報を<a href="https://www.google.com/analytics/">Google Analytics</a>を使って収集しています。Analyticsによるデータの収集はこのウェブサイト自身のクッキーを利用しているので、完全に無効化するには<a href="https://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out Browser Add-on</a>をご使用のブラウザにインストールする必要があります。</p>
 
         <p>その他にも使用しているソーシャル・メディアのウィジェット、例えば<a href="https://about.twitter.com/resources/buttons">Twitterの共有ボタン</a>等によりトラッキングが行われている可能性があります。ウィジェットによりオプトアウトする方法が異なるので、それぞれの提供元を参照してください。</p>
       </section>
