Use `https:` if possible

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -63,7 +63,8 @@
           <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
-          <li><a href="http://fontforge.github.io/en-US/">FontForge</a></li>
+          <li><a href="https://fontforge.github.io/en-US/">FontForge</a></li>
+          <li><a href="http://www.gimp.org/">GIMP</a></li>
           <li><a href="http://git-scm.com/">Git</a></li>
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
@@ -71,10 +72,9 @@
           <li><a href="http://inkscape.org/">Inkscape</a></li>
           <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
           <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a></li>
-          <li><a href="http://nodejs.org/">Node.js</a></li>
+          <li><a href="https://nodejs.org/">Node.js</a></li>
           <li><a href="http://optipng.sourceforge.net/">OptiPNG</a></li>
-          <li><a href="http://www.adobe.com/products/photoshop/">Photoshop</a></li>
-          <li><a href="http://pngquant.org/">pngquant</a></li>
+          <li><a href="https://pngquant.org/">pngquant</a></li>
           <li><a href="http://sass-lang.com/">Sass</a></li>
           <li><a href="https://people.mozilla.org/~jkew/woff/">sfnt2woff</a></li>
           <li><a href="https://github.com/svg/svgo">SVGO</a></li>
@@ -86,7 +86,7 @@
         <h2>ウェブサイト上で使っているツール</h2>
 
         <ul class="flat-ul">
-          <li><a href="http://necolas.github.io/normalize.css/">Normalize.css</a></li>
+          <li><a href="https://necolas.github.io/normalize.css/">Normalize.css</a></li>
           <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
         </ul>
 
@@ -96,7 +96,7 @@
 
         <h2>広告</h2>
 
-        <p>広告は<a href="http://www.google.com/adsense">Google AdSense</a>または<a href="http://affiliate.amazon.co.jp/?_encoding=UTF8&amp;tag=hail2unet-22&amp;linkCode=ur2&amp;camp=247&amp;creative=1211">Amazonアソシエイト・プログラム</a>のバナーです。Google AdSenseが収集している情報については<a href="http://www.google.com/intl/ja/policies/privacy/ads/">そのプライバシーについてのFAQ</a>を、Amazonアソシエイトの収集している情報については<a href="http://rcm-jp.amazon.co.jp/e/cm/privacy-policy.html?o=9">そのプライバシー情報</a>を参照してください。</p>
+        <p>広告は<a href="https://www.google.com/adsense">Google AdSense</a>または<a href="https://affiliate.amazon.co.jp/?_encoding=UTF8&amp;tag=hail2unet-22&amp;linkCode=ur2&amp;camp=247&amp;creative=1211">Amazonアソシエイト・プログラム</a>のバナーです。Google AdSenseが収集している情報については<a href="https://www.google.com/intl/ja/policies/privacy/ads/">そのプライバシーについてのFAQ</a>を、Amazonアソシエイトの収集している情報については<a href="https://rcm-jp.amazon.co.jp/e/cm/privacy-policy.html?o=9">そのプライバシー情報</a>を参照してください。</p>
 
         <h2>訪問者の追跡</h2>
 
