Split URL scheme from URL

--- a/src/html/partial/descriptive-metadata.mustache
+++ b/src/html/partial/descriptive-metadata.mustache
@@ -1,12 +1,12 @@
-<meta content="{{image}}" itemprop="image">
+<meta content="{{protocol}}{{image}}" itemprop="image">
 <link href="{{canonical}}" itemprop="url">
 <meta content="{{description}}" itemprop="description">
 
 {{#home}}<meta content="{{site_title}}" property="og:title">{{/home}}
 {{^home}}<meta content="{{short_title}} - {{site_title}}" property="og:title">{{/home}}
 <meta content="{{type}}" property="og:type">
-<meta content="{{image}}" property="og:image">
-<meta content="http://hail2u.net{{canonical}}" property="og:url">
+<meta content="{{protocol}}{{image}}" property="og:image">
+<meta content="{{protocol}}//hail2u.net{{canonical}}" property="og:url">
 <meta content="{{description}}" property="og:description">
 <meta content="ja_JP" property="og:locale">
 <meta content="{{site_title}}" property="og:site_name">
