--- a/styles/debug.css
+++ b/styles/debug.css
@@ -5,7 +5,7 @@
  * Licensed under MIT: http://hail2u.mit-license.org/2012
  */
 @font-face {
-  font-family: 'Emoji';
+  font-family: "Emoji";
   font-style: normal;
   font-weight: 400;
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
@@ -23,7 +23,7 @@
   background-repeat: repeat-y;
   background-size: 0.809rem, 0.809rem, 100%;
   bottom: 0;
-  content: '';
+  content: "";
   left: 0;
   opacity: .05;
   pointer-events: none;
@@ -48,7 +48,7 @@ body::after {
   background-color: #096;
   bottom: .5rem;
   color: #fff;
-  content: 'Small';
+  content: "Small";
   display: block;
   font-size: .875rem;
   line-height: 1;
@@ -95,7 +95,7 @@ body::after {
     .colors li::before {
       border: 1px solid #000;
       box-sizing: border-box;
-      content: '';
+      content: "";
       display: block;
       height: 100%;
       width: 100%; }
@@ -191,5 +191,5 @@ body::after {
     background-color: #ff8568; }
 
 .line-length {
-  font-family: 'Verdana', sans-serif;
+  font-family: "Verdana", sans-serif;
   word-break: break-all; }
