--- a/styles/documents.css
+++ b/styles/documents.css
@@ -513,7 +513,7 @@ th {
   font-size: 1.17em;
   font-weight: 700; }
   .seealso::before {
-    content: '🔗\FE0E\0020'; }
+    content: "🔗\FE0E\0020"; }
   .seealso a {
     font-weight: 400; }
 
@@ -562,7 +562,7 @@ th {
   kbd,
   samp,
   var {
-    font-family: 'Courier New', monospace; }
+    font-family: "Courier New", monospace; }
 
   pre {
     border: 0;
