--- a/styles/mplus-1m-latin.css
+++ b/styles/mplus-1m-latin.css
@@ -9,12 +9,12 @@
  * PROVIDED "AS IS" WITHOUT WARRANTY.
  */
 @font-face {
-  font-family: 'M+ 1m Latin';
+  font-family: "M+ 1m Latin";
   font-style: normal;
   font-weight: 400;
   src: local("M+ 1m"), local("M+ 1m regular"), url("../fonts/mplus-1m-latin/r.woff2") format("woff2"), url("../fonts/mplus-1m-latin/r.woff") format("woff"); }
 @font-face {
-  font-family: 'M+ 1m Latin';
+  font-family: "M+ 1m Latin";
   font-style: normal;
   font-weight: 700;
   src: local("M+ 1m Bold"), local("M+ 1m bold"), url("../fonts/mplus-1m-latin/b.woff2") format("woff2"), url("../fonts/mplus-1m-latin/b.woff") format("woff"); }
