--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.0
+ * style.css v6.69.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -127,7 +127,7 @@ td {
   padding: 0; }
 
 @font-face {
-  font-family: 'Emoji';
+  font-family: "Emoji";
   font-style: normal;
   font-weight: 400;
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
@@ -203,8 +203,8 @@ p, pre, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
   margin: 1.618rem 0 0; }
 
-h2 + p, h2 + pre, h2 + ul, h2 +
-ol, h2 + dl, h2 + figure, h2 + table {
+h2 + p, h2 + pre, h2 + ul,
+h2 + ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
 
 .site-search, .searchbox, figure, .global-header, .content, .content > article,
@@ -270,13 +270,13 @@ hr {
   background-color: transparent;
   border: 0;
   clear: both;
-  height: 2.618rem;
-  margin: 2.618rem auto;
-  width: 11.09rem; }
+  height: 6.854rem;
+  margin: 1.618rem auto 0;
+  width: 10.281rem; }
   hr::before {
-    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221024%22%20height%3D%221024%22%20viewBox%3D%220%200%201024%201024%22%3E%3Cpath%20d%3D%22M464%20320v108.863l-94.277-54.43-16%2027.712L496%20484.29V320zm63.998%200v164.29l142.28-82.145-16-27.713L560%20428.862V320zM337.723%20429.855l-16%2027.713L416.003%20512l-94.28%2054.432%2016%2027.713L480.003%20512c-47.43-27.375-94.85-54.773-142.28-82.145zm348.554%200L543.997%20512l142.278%2082.145c5.336-9.235%2010.67-18.476%2016.002-27.713L607.997%20512l94.28-54.432zM496%20539.71l-142.277%2082.145%2016%2027.713L464%20595.138V704h32zm31.998%200L528%20704h32l-.002-108.863%2094.28%2054.43%2016-27.712z%22%20fill%3D%22%23cac5be%22%2F%3E%3C%2Fsvg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22768%22%20height%3D%221536%22%20viewBox%3D%220%200%20768%201536%22%3E%3Cpath%20d%3D%22M352%20640v72.58l-62.85-36.29-8%2013.85L352%20731.05l16%209.24V640h-16zm48%200v100.29l16-9.24%2070.85-40.91-8-13.85L416%20712.57V640h-16zm-134.85%2077.86l-8%2013.85L320%20768l-62.85%2036.3%208%2013.8L336%20777.2l16-9.2-16-9.2-70.85-40.94zm237.7%200L416%20768l86.85%2050.1%208-13.8L448%20768l62.85-36.29-8-13.85zM400%20795.7V896h16v-72.6l62.85%2036.3%208-13.8L416%20805l-16-9.3zm-32%200l-16%209.3-17.64%2010.1-53.21%2030.8%208%2013.8L352%20823.4V896h16V795.7z%22%20fill%3D%22%23cac5be%22%2F%3E%3C%2Fsvg%3E");
     background-repeat: repeat-x;
-    background-size: 4.236rem 100%; }
+    background-size: auto 100%; }
 
 pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
@@ -395,7 +395,7 @@ kbd {
   samp::after, p
   kbd::before, p
   kbd::after {
-    content: ' ';
+    content: " ";
     display: inline-block;
     font-size: 0;
     width: 0; }
@@ -557,7 +557,7 @@ th {
   display: table-cell;
   padding-right: 0.809rem; }
   .footlinks li:first-child::after {
-    content: '·';
+    content: "·";
     margin-left: 0.809rem; }
 @media (min-width: 53.487rem) {
   .footlinks ul {
@@ -567,7 +567,7 @@ th {
   color: #6a625e; }
   .byline::before {
     border-top: 0.125rem solid #cac5be;
-    content: '';
+    content: "";
     display: block;
     height: 0;
     margin-bottom: 0.618rem;
@@ -750,7 +750,7 @@ th {
   margin-right: 1.618rem;
   text-align: center; }
   .pull-quote p {
-    quotes: '\201c' '\201d'; }
+    quotes: "\201c" "\201d"; }
     .pull-quote p::before {
       content: open-quote;
       font-weight: bolder; }
@@ -769,7 +769,7 @@ th {
 
 .read-older a::before {
   color: #534a47;
-  content: '📓\FE0E\0020Read older:';
+  content: "📓\FE0E\0020Read older:";
   display: block;
   font-weight: bolder;
   line-height: 1;
@@ -790,13 +790,13 @@ th {
   color: #534a47;
   font-size: 1.313rem; }
   .seealso::before {
-    content: '🔗\FE0E\0020'; }
+    content: "🔗\FE0E\0020"; }
 
 .seemore a {
   font-weight: bolder;
   text-transform: uppercase; }
   .seemore a::before {
-    content: '➔\FE0E\0020'; }
+    content: "➔\FE0E\0020"; }
 
 .sidenote {
   color: #98928c;
@@ -809,7 +809,7 @@ th {
   color: inherit; }
 .topic .section-footer + p::after {
   color: #1188bb;
-  content: 'More ➟\FE0E';
+  content: "More ➟\FE0E";
   font-size: 0.811rem;
   font-weight: bolder;
   margin-left: 0.809rem;
@@ -821,7 +821,7 @@ th {
   padding-left: 0; }
   .share-buttons ul::before {
     color: #534a47;
-    content: '📣\FE0E\0020Share:';
+    content: "📣\FE0E\0020Share:";
     display: table-cell;
     font-weight: bold;
     text-transform: uppercase; }
