--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -52,8 +52,7 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-            · <span class="tag"><a href="/blog/{{cat}}/">{{category}}</a></span></div>
+          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
           <a href="{{link}}">{{{title}}}</a>
         </li>
 
