--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -44,8 +44,7 @@
           <ol class="post-list">
             {{#item}}
               <li>
-                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-                  · <span class="tag">{{category}}</span></div>
+                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
                 <a href="{{link}}">{{{title}}}</a>
               </li>
             {{/item}}
