--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.1
+ * style.css v6.69.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -190,10 +190,10 @@ hr, .share-buttons a {
     background-repeat: no-repeat;
     background-size: contain; }
 
-h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
+h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
   text-decoration: none; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
-    h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
+    h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
       -moz-text-decoration-color: initial;
       -webkit-text-decoration-color: initial;
       text-decoration-color: initial;
@@ -729,18 +729,35 @@ th {
     width: 3.246rem; }
 
 .post-list {
+  margin-top: 1rem;
   padding-left: 0; }
   .post-list li {
+    border-top: 0.063rem solid #e1ddd5;
+    font-size: 1.313rem;
+    line-height: 1.294;
     list-style-type: none;
-    margin-top: 0.618rem; }
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem; }
+    .post-list li:first-child {
+      border-top-width: 0; }
   @media (min-width: 39.118rem) {
     .post-list .info {
       float: right;
-      font-size: 1rem;
-      line-height: 1.618; } }
+      line-height: 2.094;
+      margin-left: 0.809rem; } }
+  @media (min-width: 53.487rem) {
+    .post-list li {
+      margin-left: -14.369rem;
+      padding-left: 14.369rem; } }
+  @media (min-width: 53.487rem) and (min-width: 53.487rem) {
+    .post-list li:first-child {
+      border-top-width: 0.063rem; } }
   @media (min-width: 53.487rem) {
     .post-list .info {
-      float: none; } }
+      float: none;
+      left: 0;
+      margin-left: 0;
+      padding-top: 0.5rem; } }
 
 .pull-quote {
   color: #6a625e;
