--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.2
+ * style.css v6.69.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -194,10 +194,12 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post
   text-decoration: none; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
-      -moz-text-decoration-color: initial;
-      -webkit-text-decoration-color: initial;
-      text-decoration-color: initial;
       color: #1188bb; } }
+  h1 a:visited, .global-header a:visited, .section-footer a:visited, .global-footer a:visited, .icon-list a:visited, .post-list a:visited, .read-older a:visited, .seemore a:visited, .topic a:visited, .share-buttons a:visited {
+    color: #056b97; }
+    @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
+      h1 a:visited, .global-header a:visited, .section-footer a:visited, .global-footer a:visited, .icon-list a:visited, .post-list a:visited, .read-older a:visited, .seemore a:visited, .topic a:visited, .share-buttons a:visited {
+        color: #056b97; } }
 
 p, pre, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
@@ -366,6 +368,13 @@ a {
       -webkit-text-decoration-color: #5bacd0;
       text-decoration-color: #5bacd0;
       color: inherit; } }
+  a:visited {
+    color: inherit; }
+    @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
+      a:visited {
+        -moz-text-decoration-color: inherit;
+        -webkit-text-decoration-color: inherit;
+        text-decoration-color: inherit; } }
 
 em {
   color: #534a47;
@@ -477,6 +486,8 @@ th {
   .site-navigation a {
     color: inherit;
     display: inline-block; }
+    .site-navigation a:visited {
+      color: inherit; }
   .site-navigation mark {
     background-color: transparent;
     border-bottom: 0.125rem solid #1188bb; }
@@ -824,6 +835,8 @@ th {
 
 .topic > a {
   color: inherit; }
+  .topic > a:visited {
+    color: inherit; }
 .topic .section-footer + p::after {
   color: #1188bb;
   content: "More ➟\FE0E";
@@ -855,8 +868,8 @@ th {
     background-size: auto 61.804%; }
   @media (min-width: 53.487rem) {
     .share-buttons a {
-      height: 1.974rem;
-      width: 1.974rem; } }
+      height: 1.903rem;
+      width: 1.903rem; } }
 .share-buttons .twitter-tweet a::before {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M448%20136.906c-14.128%206.267-29.313%2010.5-45.247%2012.405%2016.263-9.748%2028.756-25.187%2034.64-43.585-15.225%209.03-32.084%2015.585-50.03%2019.118-14.37-15.312-34.845-24.878-57.505-24.878-43.507%200-78.783%2035.273-78.783%2078.78%200%206.175.697%2012.188%202.04%2017.954-65.475-3.286-123.526-34.65-162.382-82.315-6.782%2011.635-10.667%2025.17-10.667%2039.607%200%2027.333%2013.908%2051.447%2035.05%2065.574-12.916-.41-25.064-3.953-35.685-9.853-.006.328-.006.656-.006.99%200%2038.17%2027.156%2070.01%2063.196%2077.25-6.61%201.8-13.57%202.764-20.755%202.764-5.077%200-10.012-.495-14.823-1.414%2010.025%2031.298%2039.12%2054.077%2073.594%2054.71-26.962%2021.132-60.93%2033.726-97.842%2033.726-6.36%200-12.63-.375-18.794-1.102%2034.865%2022.352%2076.276%2035.397%20120.766%2035.397%20144.908%200%20224.152-120.046%20224.152-224.155%200-3.415-.078-6.812-.23-10.19%2015.395-11.11%2028.75-24.984%2039.312-40.784%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E"); }
 .share-buttons .facebook-share a::before {
@@ -865,6 +878,8 @@ th {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M220.745%2064.002c-27.018%200-65.95%206.393-94.456%2029.924-21.484%2018.536-31.964%2044.092-31.964%2067.1%200%2039.054%2029.988%2078.645%2082.94%2078.645%205%200%2010.47-.492%2015.977-1.003-2.472%206.017-4.972%2011.025-4.972%2019.53%200%2015.51%207.97%2025.024%2014.995%2034.034-22.5%201.548-64.502%204.04-95.466%2023.07-29.49%2017.54-38.468%2043.064-38.468%2061.08%200%2037.08%2034.953%2071.62%20107.427%2071.62%2085.94%200%20131.44-47.557%20131.44-94.633.004-34.59-19.977-51.615-41.97-70.142v-.002l-18.006-13.983c-5.484-4.548-12.985-10.553-12.985-21.543%200-11.037%207.5-18.053%2014.01-24.55%2020.976-16.51%2041.935-34.084%2041.935-71.114%200-38.08-23.96-58.11-35.444-67.613h30.964l32.5-20.42h-98.46zm-36.46%2018.918c41.45%200%2062.948%2056.078%2062.948%2092.145%200%209.024-.996%2025.015-12.488%2036.575-8.038%208.02-21.487%2013.997-33.974%2013.997-42.992%200-62.468-55.58-62.468-89.116%200-13.055%202.47-26.536%2010.975-37.066%208.016-10.027%2021.976-16.533%2035.01-16.533zm183.41%2091.882v50.07H317.71v25.006h49.986v50.376h24.73V249.88h50.24V224.87h-50.24v-50.07h-24.732zm-158.93%20131.47c4.996%200%207.496%200%2011.474.502%2038.007%2027.05%2054.503%2040.53%2054.503%2066.136%200%2031.01-25.492%2054.102-73.478%2054.102-53.464%200-87.943-25.575-87.943-61.137%200-35.552%2031.97-47.58%2042.97-51.56%2020.975-7.06%2047.97-8.043%2052.473-8.043z%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E"); }
 .share-buttons .hatena-bookmark a::before {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M64%2096v320h148c40%200%2080-12%2096-48%2020-36%2012-92-24-116-12-8-24-12-36-16%2028-4%2052-24%2052-52%204-28-4-64-32-76-32-12-76-12-108-12H64zm300%200v212h80V96h-80zm-220%2060s44%200%2056%204c24%208%2024%2048-4%2052-8%204-52%204-52%204v-60zm0%20124s44%200%2064%204c24%204%2032%2028%2020%2048-8%2016-24%2016-40%2016h-44v-68zm260%2048a44%2044%200%200%200-44%2044%2044%2044%200%200%200%2044%2044%2044%2044%200%200%200%2044-44%2044%2044%200%200%200-44-44z%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E"); }
+.share-buttons .instapaper-save a::before {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M352%20448v-16c-48%200-48-16-48-64V144c0-48%200-64%2048-64V64H160v16c48%200%2048%2016%2048%2064v224c0%2048%200%2064-48%2064v16z%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E"); }
 @media (min-width: 53.487rem) {
   .share-buttons ul {
     bottom: 0;
@@ -874,7 +889,7 @@ th {
       margin-bottom: 0.618rem; }
   .share-buttons li {
     padding-left: 0;
-    padding-right: 1.618rem; } }
+    padding-right: 0.809rem; } }
 
 .adsbygoogle {
   margin-top: 2.618rem;
