--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.3
+ * style.css v6.69.4
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -331,7 +331,7 @@ dt {
   font-weight: bolder; }
 
 dd {
-  padding-left: 2.618rem; }
+  margin-left: 2.618rem; }
 
 figcaption {
   color: #6a625e; }
@@ -444,15 +444,19 @@ table {
 
 th,
 td {
-  border-bottom: 0.063rem solid #cac5be;
+  border-top: 0.063rem solid #cac5be;
   padding: 0.5rem;
   vertical-align: top;
   white-space: nowrap; }
+  table > :first-child > th, table > :first-child > :first-child > th, table > :first-child >
+  td, table > :first-child > :first-child >
+  td {
+    border-top-width: 0; }
 
 th {
   text-align: left; }
   thead th {
-    border-bottom-width: 0.125rem; }
+    border-bottom: 0.125rem solid #cac5be; }
 
 .logo {
   background-color: transparent;
@@ -460,14 +464,14 @@ th {
   height: 3.01rem;
   margin-top: 0;
   position: fixed;
-  width: 1.86rem;
+  width: 2.007rem;
   z-index: 10; }
   .logo.to-top {
     cursor: pointer; }
   @media (min-width: 39.118rem) {
     .logo {
       height: 4.87rem;
-      width: 3.01rem; } }
+      width: 3.247rem; } }
   @media (min-width: 53.487rem) {
     .logo {
       margin-left: -14.369rem; } }
@@ -747,8 +751,8 @@ th {
     font-size: 1.313rem;
     line-height: 1.294;
     list-style-type: none;
-    padding-bottom: 0.5rem;
-    padding-top: 0.5rem; }
+    padding-bottom: 1rem;
+    padding-top: 1rem; }
     .post-list li:first-child {
       border-top-width: 0; }
   @media (min-width: 39.118rem) {
@@ -768,7 +772,7 @@ th {
       float: none;
       left: 0;
       margin-left: 0;
-      padding-top: 0.5rem; } }
+      padding-top: 1rem; } }
 
 .pull-quote {
   color: #6a625e;
