--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.4
+ * style.css v6.69.5
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -195,11 +195,6 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
       color: #1188bb; } }
-  h1 a:visited, .global-header a:visited, .section-footer a:visited, .global-footer a:visited, .icon-list a:visited, .post-list a:visited, .read-older a:visited, .seemore a:visited, .topic a:visited, .share-buttons a:visited {
-    color: #056b97; }
-    @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
-      h1 a:visited, .global-header a:visited, .section-footer a:visited, .global-footer a:visited, .icon-list a:visited, .post-list a:visited, .read-older a:visited, .seemore a:visited, .topic a:visited, .share-buttons a:visited {
-        color: #056b97; } }
 
 p, pre, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
@@ -368,13 +363,6 @@ a {
       -webkit-text-decoration-color: #5bacd0;
       text-decoration-color: #5bacd0;
       color: inherit; } }
-  a:visited {
-    color: inherit; }
-    @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
-      a:visited {
-        -moz-text-decoration-color: inherit;
-        -webkit-text-decoration-color: inherit;
-        text-decoration-color: inherit; } }
 
 em {
   color: #534a47;
@@ -490,8 +478,6 @@ th {
   .site-navigation a {
     color: inherit;
     display: inline-block; }
-    .site-navigation a:visited {
-      color: inherit; }
   .site-navigation mark {
     background-color: transparent;
     border-bottom: 0.125rem solid #1188bb; }
@@ -763,11 +749,7 @@ th {
   @media (min-width: 53.487rem) {
     .post-list li {
       margin-left: -14.369rem;
-      padding-left: 14.369rem; } }
-  @media (min-width: 53.487rem) and (min-width: 53.487rem) {
-    .post-list li:first-child {
-      border-top-width: 0.063rem; } }
-  @media (min-width: 53.487rem) {
+      padding-left: 14.369rem; }
     .post-list .info {
       float: none;
       left: 0;
@@ -839,8 +821,6 @@ th {
 
 .topic > a {
   color: inherit; }
-  .topic > a:visited {
-    color: inherit; }
 .topic .section-footer + p::after {
   color: #1188bb;
   content: "More ➟\FE0E";
