--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.5
+ * style.css v6.69.6
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -639,11 +639,12 @@ th {
   display: block;
   font-size: 1.618rem;
   font-weight: bolder;
-  letter-spacing: 0.125rem;
+  letter-spacing: 0.5rem;
   margin-top: 1rem;
-  padding-left: 0.125rem;
+  padding-left: 0.5rem;
+  padding-right: 0;
   text-transform: uppercase;
-  width: 6em; }
+  width: 100%; }
 
 .drop img {
   min-width: 12.751rem; }
@@ -884,6 +885,9 @@ html {
 
 pre {
   padding-bottom: 1px; }
+
+.contact-form .button {
+  -webkit-appearance: none; }
 
 @media print {
   * {
