--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.6
+ * style.css v6.69.7
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -190,10 +190,10 @@ hr, .share-buttons a {
     background-repeat: no-repeat;
     background-size: contain; }
 
-h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
+h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .topic a, .share-buttons a {
   text-decoration: none; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
-    h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
+    h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .post-list a, .read-older a, .topic a, .share-buttons a {
       color: #1188bb; } }
 
 p, pre, ul,
@@ -784,7 +784,7 @@ th {
 
 .read-older a::before {
   color: #534a47;
-  content: "📓\FE0E\0020Read older:";
+  content: "Read older:";
   display: block;
   font-weight: bolder;
   line-height: 1;
@@ -804,14 +804,6 @@ th {
 .seealso {
   color: #534a47;
   font-size: 1.313rem; }
-  .seealso::before {
-    content: "🔗\FE0E\0020"; }
-
-.seemore a {
-  font-weight: bolder;
-  text-transform: uppercase; }
-  .seemore a::before {
-    content: "➔\FE0E\0020"; }
 
 .sidenote {
   color: #98928c;
@@ -822,21 +814,13 @@ th {
 
 .topic > a {
   color: inherit; }
-.topic .section-footer + p::after {
-  color: #1188bb;
-  content: "More ➟\FE0E";
-  font-size: 0.811rem;
-  font-weight: bolder;
-  margin-left: 0.809rem;
-  text-transform: uppercase;
-  white-space: nowrap; }
 
 .share-buttons ul {
   line-height: 1.618;
   padding-left: 0; }
   .share-buttons ul::before {
     color: #534a47;
-    content: "📣\FE0E\0020Share:";
+    content: "Share:";
     display: table-cell;
     font-weight: bold;
     text-transform: uppercase; }
@@ -882,9 +866,6 @@ th {
 
 html {
   -ms-overflow-style: -ms-autohiding-scrollbar; }
-
-pre {
-  padding-bottom: 1px; }
 
 .contact-form .button {
   -webkit-appearance: none; }
