--- a/styles/debug.css
+++ b/styles/debug.css
@@ -66,9 +66,7 @@ body::after {
       display: none; } }
 
 .version {
-  color: #ff3b0c;
   font-size: 1rem;
-  font-weight: normal;
   vertical-align: super; }
 
 .font-family-body {
@@ -142,53 +140,13 @@ body::after {
   .colors.variation-accent.complement li:nth-child(1)::before {
     background-color: #ff8c0c; }
   .colors.variation-accent.complement li:nth-child(2)::before {
-    background-color: #b96200; }
+    background-color: #b94f00; }
   .colors.variation-accent.complement li:nth-child(3)::before {
-    background-color: #ef7e00; }
+    background-color: #cf6900; }
   .colors.variation-accent.complement li:nth-child(4)::before {
-    background-color: #ffa33c; }
+    background-color: #ffac0e; }
   .colors.variation-accent.complement li:nth-child(5)::before {
-    background-color: #ffb868; }
-  .colors.variation-accent.adjacent-negative li:nth-child(1)::before {
-    background-color: #0acb58; }
-  .colors.variation-accent.adjacent-negative li:nth-child(2)::before {
-    background-color: #008536; }
-  .colors.variation-accent.adjacent-negative li:nth-child(3)::before {
-    background-color: #00ac46; }
-  .colors.variation-accent.adjacent-negative li:nth-child(4)::before {
-    background-color: #31d172; }
-  .colors.variation-accent.adjacent-negative li:nth-child(5)::before {
-    background-color: #5adb8e; }
-  .colors.variation-accent.adjacent-positive li:nth-child(1)::before {
-    background-color: #2238c5; }
-  .colors.variation-accent.adjacent-positive li:nth-child(2)::before {
-    background-color: #0c1c7f; }
-  .colors.variation-accent.adjacent-positive li:nth-child(3)::before {
-    background-color: #1024a4; }
-  .colors.variation-accent.adjacent-positive li:nth-child(4)::before {
-    background-color: #4457cc; }
-  .colors.variation-accent.adjacent-positive li:nth-child(5)::before {
-    background-color: #6878d7; }
-  .colors.variation-accent.triad-negative li:nth-child(1)::before {
-    background-color: #ffba0c; }
-  .colors.variation-accent.triad-negative li:nth-child(2)::before {
-    background-color: #b98500; }
-  .colors.variation-accent.triad-negative li:nth-child(3)::before {
-    background-color: #efac00; }
-  .colors.variation-accent.triad-negative li:nth-child(4)::before {
-    background-color: #ffc83c; }
-  .colors.variation-accent.triad-negative li:nth-child(5)::before {
-    background-color: #ffd468; }
-  .colors.variation-accent.triad-positive li:nth-child(1)::before {
-    background-color: #ff3b0c; }
-  .colors.variation-accent.triad-positive li:nth-child(2)::before {
-    background-color: #b92300; }
-  .colors.variation-accent.triad-positive li:nth-child(3)::before {
-    background-color: #ef2e00; }
-  .colors.variation-accent.triad-positive li:nth-child(4)::before {
-    background-color: #ff613c; }
-  .colors.variation-accent.triad-positive li:nth-child(5)::before {
-    background-color: #ff8568; }
+    background-color: #ffd913; }
 
 .line-length {
   font-family: "Verdana", sans-serif;
