--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.7
+ * style.css v6.69.8
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -370,7 +370,7 @@ em {
   font-weight: bolder; }
 
 strong {
-  color: #ef2e00;
+  color: #ff8c0c;
   font-weight: bolder; }
 
 cite {
@@ -398,7 +398,7 @@ kbd {
     width: 0; }
 
 mark {
-  background-color: #ffba0c;
+  background-color: #ffd913;
   color: inherit; }
 
 ins {
@@ -645,6 +645,17 @@ th {
   padding-right: 0;
   text-transform: uppercase;
   width: 100%; }
+.contact-form *::-moz-placeholder {
+  color: inherit;
+  opacity: 0.25; }
+.contact-form *::-ms-input-placeholder {
+  color: inherit;
+  opacity: 0.25; }
+.contact-form *::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.25; }
+.contact-form *::placeholder-shown {
+  opacity: 0.25; }
 
 .drop img {
   min-width: 12.751rem; }
