Remove unnecessary `class` for Share Buttons

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -80,11 +80,9 @@
 
         <aside class="share-buttons">
           <ul>
-            <li class="twitter-tweet"><a href="https://twitter.com/intent/tweet?text=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>&amp;via=hail2unet&amp;related=hail2u_">Tweet</a></li>
-            <li class="facebook-share"><a href="https://www.facebook.com/sharer/sharer.php?u=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Share</a></li>
-            <li class="googleplus-share"><a href="https://plus.google.com/share?url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Share</a></li>
-            <li class="hatena-bookmark"><a href="http://b.hatena.ne.jp/my/add.confirm?title=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Bookmark</a></li>
-            <li class="instapaper-save"><a href="https://www.instapaper.com/hello2?title=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Save</a></li>
+            <li><a href="https://twitter.com/intent/tweet?text=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>&amp;via=hail2unet&amp;related=hail2u_">Twitter</a></li>
+            <li><a href="https://www.facebook.com/sharer/sharer.php?u=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Facebook</a></li>
+            <li><a href="http://b.hatena.ne.jp/my/add.confirm?title=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Hatena</a></li>
           </ul>
         </aside>
       <?$permalink::is_permalink eq="1"></div></?>
