Don’t disable HTML escaping

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -31,7 +31,7 @@
 
               {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
 
-              <p>{{{description}}}</p>
+              <p>{{description}}</p>
             </a>
           {{/first}}
         </section>
