--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -1,13 +1,11 @@
 <footer class="global-footer" role="contentinfo">
-  <section class="footlinks">
-    <ul>
-      <li><a href="{{license_url}}" rel="license">CC BY-NC</a></li>
-      <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
-      <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
-      <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
-      <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
-    </ul>
-  </section>
+  <ul class="footlinks">
+    <li><a href="{{license_url}}" rel="license">CC BY-NC</a></li>
+    <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
+    <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
+    <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
+    <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
+  </ul>
 
   <p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a href="https://kyonagashima.com/" rel="author" itemprop="url">Kyo Nagashima</a></span>.</p>
 </footer>
